Kubernetes/manual-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-react-deployment
  namespace: api-production
  labels:
    app: eks-todo-app
spec:
  selector:
    matchLabels:
      app: eks-todo-app
  template:
    metadata:
      labels:
        app: eks-todo-app
    spec:
      containers:
        - name: todo-react-app-phong-trainee
          image: 492804330065.dkr.ecr.us-west-2.amazonaws.com/todoreactapp
          ports:
            - name: http
              containerPort: 5000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
