Kubernetes/manual-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pern-todoapp-svc
  namespace: todoapp
  labels:
    app: pern-todoapp
spec:
  selector:
    app: pern-todoapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
