Kubernetes/manual-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pern-todoapp-ingress
  namespace: todoapp
  labels:
    app: pern-todoapp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # cert-manager.io/cluster-issuer: letsencrypt-route53
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    #alb.ingress.kubernetes.io/ssl-redirect: '443'
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:492804330065:certificate/64a16580-8524-411b-97b6-d51088d15d75
    alb.ingress.kubernetes.io/load-balancer-name: 'pern-todoapp-api'
    alb.ingress.kubernetes.io/healthcheck-path: /todos
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pern-todoapp-svc
                port:
                  number: 5000
  # tls:
  #   - hosts:
  #       - be-phong.devops-training.opswat.com
  #     secretName: route53-cert-secrect
